All tests passing.